# anki-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_TOPICS.md  LICENSE  PRODUCT_HUNT_GUIDE.md  README.md  REDDIT_POST.md  SOCIAL_POSTS.md  plan.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
src/anki_mcp/: __init__.py  __main__.py  config.py  server.py  validation.py
src/anki_mcp/client/: __init__.py  actions.py  base.py  models.py
src/anki_mcp/generators/: __init__.py
src/anki_mcp/prompts/: __init__.py  base.py
src/anki_mcp/resources/: __init__.py  base.py
src/anki_mcp/tools/: __init__.py  card.py  deck.py  generation.py  import_export.py  media.py  model.py  note.py  pdf_course.py  pdf_qcm.py  review.py  statistics.py  sync.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_models.py
